<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    
	<TextView android:id="@+id/textview_third_activity_name"
		android:text="@string/textview_third_activity_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium" 
	/>
	
	<EditText android:id="@+id/edittext_third_activity_name" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent" 
		android:layout_alignParentTop="true" 
		android:layout_toRightOf="@+id/textview_third_activity_name"
	>
		<requestFocus/>
	</EditText>
	
	<TextView android:id="@+id/textview_third_activity_developer"
		android:text="@string/textview_third_activity_developer" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_below="@+id/edittext_third_activity_name" 
		android:layout_alignParentLeft="true"
	/>
	
	<EditText android:id="@+id/edittext_third_activity_developer" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent"
		android:layout_below="@+id/edittext_third_activity_name" 
		android:layout_toRightOf="@+id/textview_third_activity_developer"
	/>
	
	<TextView android:id="@+id/textview_third_activity_date" 
		android:text="@string/textview_third_activity_date" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:textAppearance="?android:attr/textAppearanceMedium" 
		android:layout_below="@+id/edittext_third_activity_developer" 
		android:layout_alignParentLeft="true"
	/>
	
	<DatePicker android:id="@+id/datepicker_third_activity_date" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:layout_alignTop="@+id/textview_third_activity_date" 
		android:layout_toRightOf="@+id/textview_third_activity_date"
	/>
	
	<TextView android:id="@+id/textview_third_activity_url"
		android:text="@string/textview_third_activity_url" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium" 
		android:layout_below="@+id/datepicker_third_activity_date" 
		android:layout_alignParentLeft="true"
	/>
	
	<EditText android:id="@+id/edittext_third_activity_url"
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:layout_below="@+id/datepicker_third_activity_date" 
		android:layout_toRightOf="@+id/textview_third_activity_url" 
		android:layout_alignRight="@+id/datepicker_third_activity_date"
	/>
	
</RelativeLayout>